# RPI_EPIC_CANBUS

./: .gitignore  CMakeLists.txt  README.md  epic.conf.example  rpi_epic_canbus.service
configs/: balanced.conf  custom_example.conf  inputs_only.conf  outputs_focus.conf
include/: adc_interface.h  can_interface.h  config.h  epic_protocol.h  gpio_interface.h  gps_interface.h  nmea_parser.h
src/: adc_interface.cpp  can_interface.cpp  config.cpp  gpio_interface.cpp  gps_interface.cpp  main.cpp  nmea_parser.cpp
